--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=BitBus
+name=BitBusEZ
 version=0.0.1
 author=Eric Z. Ayers
 maintainer=Eric Z. Ayers <ericzundel@gmail.com>
-sentence=Use the BitBus app in Analog Controller mode with an Arduino.
-paragraph=Usethe BitBus app in Analog Controller modewith an Arduino.  Meant to emulate the software interface of the Dabble Arduino library for easy portability between them both. 
+sentence=Supports the BlueBit BitBus app in Analog Controller mode with an Arduino.
+paragraph=Use the BitBus app in Analog Controller modewith an Arduino. Usefull for controlling your device on a mobile device via bluetooth. Meant to emulate the software interface of the Dabble Arduino library for easy portability between them both. 
 category=Communication
 url=https://github.com/ericzundel/BitBus
 architectures=*
